<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:padding="10dip">

    <EditText
        android:hint="@string/hint_ipdevice"
        android:id="@+id/editText_ipaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:hint="@string/hint_name"
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <requestFocus />
	</EditText>
    <EditText
        android:hint="@string/hint_location"
        android:id="@+id/editText_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_credentials"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:hint="@string/hint_username"
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/hint_passwd"
        android:id="@+id/editText_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_adddevice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_adddevice"
        android:onClick="addNodoDevice" />

</LinearLayout>
