<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="10dip">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_deviceportinformation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:hint="@string/hint_name"
        android:id="@+id/editText_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:hint="@string/hint_port"
        android:id="@+id/editText_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:hint="@string/hint_tag"
        android:id="@+id/editText_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" 
        >
	<Button
		android:id="@+id/button_addaction"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_add"
        android:onClick="addActionByVoice"
        />

    <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save"
            android:onClick="addDevicePortButton" />
        
    </LinearLayout>    
    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_action"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listViewDevicePort"
        android:layout_width="fill_parent"
        android:background="@color/black"
        android:layout_height="fill_parent"
        android:dividerHeight="0.1dp" >
    </ListView>
    
</LinearLayout>
