<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" 
        >
        <EditText
            android:id="@+id/edittext_ipaddress"
            android:hint="@string/hint_ipdevice"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:ems="1" >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" 
        >
		<Button
            android:id="@+id/button_searchdevice"
            android:onClick="searchDeviceButton"
            android:text="@string/button_searchdevice"
            style="@style/CodeFont"/> 
		    <View
    			android:layout_width="1dip"
    			android:layout_height="fill_parent"
    			android:background="@android:color/darker_gray"
    		/>
        <Button
            android:id="@+id/button_adddevice"
            style="@style/CodeFont"
            android:text="@string/button_adddevice"
            android:onClick="addDeviceButton" />
    </LinearLayout>    
    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp" 
        android:dividerHeight="2dip"
        android:divider="@color/grey"
        >
    </ListView>
</LinearLayout>