<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" 
        >
        <TextView
            android:id="@+id/textView_devicenameinfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <View
        android:background="@color/grey"
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    />
        <EditText
            android:id="@+id/edittext_tagsearch"
            android:ems="10"
            android:hint="@string/hint_tag"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:textColor="@color/black"
             >
        </EditText>
    </LinearLayout>
    <View
        android:background="@color/grey"
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" 
        >
        <Button
            android:id="@+id/button_searchdeviceport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="searchDevicePortButton"
            android:text="@string/button_searchdevice"
            style="@style/CodeFont"
            />
			<View
    			android:layout_width="1dip"
    			android:layout_height="fill_parent"
    			android:background="@android:color/darker_gray"
    		/>
        <Button
            android:id="@+id/button_adddeviceport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_adddevice"
            android:onClick="addDevicePortButton"
            style="@style/CodeFont" />
    </LinearLayout>    
    <ListView
        android:id="@+id/listViewDevicePorts"
        android:background="@color/black"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp" 
        android:dividerHeight="0.2dp"
        android:divider="@color/grey" >
    </ListView>
</LinearLayout>